--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -14,17 +14,20 @@ border_width		                        = 0
 region_padding		                        = 18
 tile_gap		                            = 18
 
-bar_border_width	                        = 3
+bar_border_width	                        = 2
 bar_border[1]		                        = rgb:00/00/00
 bar_border_unfocus[1]	                    = rgb:00/00/00
-bar_color[1]		                        = rgb:00/00/00,rgb:df/e1/48,rgb:a0/a0/a0,rgb:45/86/A6
-bar_font_color[1]	                        = rgb:ff/ff/ff,rgb:e6/5b/5b,rgb:df/e1/48,black
+bar_color[1]		                        = rgb:00/00/00,rgb:df/e1/48,rgb:de/de/de,rgb:45/86/A6
+bar_font_color[1]	                        = rgb:de/de/de,rgb:e6/5b/5b,rgb:df/e1/48,rgb:de/de/de
 bar_font_color_selected	                    = rgb:df/e1/48
-bar_font		                            = NotoSans Nerd Font:size=12:style=Regular:antialias=true 
+bar_font		                            = NotoSans Nerd Font:size=12,NotoSans Nerd Font:size=16
 bar_action		                            = conky
 bar_action_expand	                        = 1
-bar_format		                            = +@fg=2;+L+5<+@fg=0;+@bg=3;  +D+_30_C  +|R +@fg=3;+A
-workspace_indicator	                        = markcurrent,printnames,listactive,noindexes
+bar_format		                            = +@fg=2;+@fn=1;+L+@fn=0;+5<+@fg=0;+@bg=3;+@fn=1;  +D+@fn=0;+_30_C  +|R +@fg=3;+A
+workspace_indicator	                        = markcurrent,printnames,listall,noindexes,markactive,markempty
+workspace_mark_current                      = "+@fg=1;"
+workspace_mark_active                       = "+@fg=2;"
+workspace_mark_empty                        = "+@fg=3;"
 window_class_enabled	                    = 1
 
 region		                                = screen[1]:1920x1080+0+0
@@ -35,33 +38,15 @@ layout   		                            = ws[4]:7:0:0:0:vertical
 
 name			                            = ws[1]:爵
 name			                            = ws[2]:
-name                                        = ws[3]:
+name                                        = ws[3]:
 name			                            = ws[4]:
-name			                            = ws[5]:
-name                                        = ws[6]:
-name                                        = ws[7]:
+name			                            = ws[5]:
+name                                        = ws[6]:
+name                                        = ws[7]:
 
 autorun                                     = ws[3]:pcmanfm
 autorun                                     = ws[5]:thunderbird
 autorun                                     = ws[4]:kitty --name A
-
-quirk[Vivaldi-stable]                       = WS[1]
-quirk[code-oss]                             = WS[2]
-quirk[Pcmanfm:pcmanfm]                      = WS[3]
-quirk[kitty:A]                              = WS[4]
-quirk[Thunderbird]                          = WS[5]
-quirk[Cadence:cadence.py]                   = FLOAT
-quirk[Floaterm]                             = FLOAT
-quirk[Youtube Downloader:youtubedl-gui]     = FLOAT
-quirk[Carla2-Multi-Client]                  = FLOAT
-quirk[SimpleScreenRecorder]                 = FLOAT
-quirk[Nm-connection-editor]                 = FLOAT
-quirk[Gcolor2]                              = FLOAT
-quirk[Arandr]                               = FLOAT
-quirk[balena-etcher-electron]               = FLOAT
-quirk[feh]                                  = FLOAT + IGNORESPAWNWS
-quirk[kitty:kitty]                          = IGNORESPAWNWS
-quirk[multibootusb]                         = FLOAT
 
 program[power]                              = sh /mnt/Gog/repos/system/Scripts/dpower.sh
 program[clipmenu]                           = sh /mnt/Gog/repos/system/Scripts/clipmenu.sh
@@ -70,7 +55,8 @@ program[menu]		                        = sh /mnt/Gog/repos/system/Scripts/menu.s
 program[run_menu]                           = sh /mnt/Gog/repos/system/Scripts/run_menu.sh
 program[bindings]                           = sh /mnt/Gog/repos/system/Scripts/bindings.sh
 program[paper]                              = sh /mnt/Gog/repos/system/Scripts/randpaper.sh
-program[screenshot_all]	                    = flameshot full -p /mnt/Gog/Pictures/scrots
+program[kitty_theme]                        = sh /mnt/Gog/repos/system/Scripts/kitty_theme.sh
+program[screenshot_all]	                    = flameshot full -d 5000 -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
 program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
 program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 20% carla-jack-multi
@@ -89,7 +75,27 @@ program[network]                            = nm-connection-editor
 program[git]                                = gitkraken
 program[cadence]                            = cadence
 program[term]		                        = kitty
- 
+
+quirk[Vivaldi-stable]                       = WS[1]
+quirk[code-oss]                             = WS[2]
+quirk[Pcmanfm:pcmanfm]                      = WS[3]
+quirk[kitty:A]                              = WS[4]
+quirk[Thunderbird]                          = WS[5]
+quirk[Cadence:cadence.py]                   = FLOAT
+quirk[Floaterm]                             = FLOAT
+quirk[Youtube Downloader:youtubedl-gui]     = FLOAT
+quirk[Carla2-Multi-Client]                  = FLOAT
+quirk[SimpleScreenRecorder]                 = FLOAT
+quirk[Nm-connection-editor]                 = FLOAT
+quirk[Gcolor2]                              = FLOAT
+quirk[Arandr]                               = FLOAT
+quirk[balena-etcher-electron]               = FLOAT
+quirk[feh]                                  = FLOAT + IGNORESPAWNWS
+quirk[kitty:kitty]                          = IGNORESPAWNWS
+quirk[multibootusb]                         = FLOAT
+quirk[Gxmessage]                            = FLOAT
+quirk[Gnome-mplayer]                        = FLOAT
+
 ####### Key bindings #######
 
 bind[browser]                               = MOD+F1
@@ -118,6 +124,7 @@ bind[run_menu]                              = MOD+Shift+d
 bind[clipmenu]                              = MOD+c
 bind[bindings]                              = MOD+k
 bind[winfind]                               = MOD+g
+bind[kitty_theme]                           = MOD+r
 bind[power]                                 = MOD+Pause
 
 bind[float_toggle]	                        = MOD+t
