--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -379,6 +379,8 @@ tab_bar_background      #999
 
 #: Color scheme {{{
 
+include ./theme.conf
+
 # foreground #dddddd
 # background #000000
 
@@ -418,43 +420,43 @@ background_opacity         0.6
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
-# Black, Gray, Silver, White
-color0 #1d2021
-color8 #665c54
-color7 #d5c4a1
-color15 #fbf1c7
+# # Black, Gray, Silver, White
+# color0 #1d2021
+# color8 #665c54
+# color7 #d5c4a1
+# color15 #fbf1c7
 
-# Red
-color1 #fb4934
-color9 #fb4934
+# # Red
+# color1 #fb4934
+# color9 #fb4934
 
-# Green
-color2 #b8bb26
-color10 #b8bb26
+# # Green
+# color2 #b8bb26
+# color10 #b8bb26
 
-# Yellow
-color3 #fabd2f
-color11 #fabd2f
+# # Yellow
+# color3 #fabd2f
+# color11 #fabd2f
 
-# Blue
-color4 #83a598
-color12 #83a598
+# # Blue
+# color4 #83a598
+# color12 #83a598
 
-# Purple
-color5 #d3869b
-color13 #d3869b
+# # Purple
+# color5 #d3869b
+# color13 #d3869b
 
-# Teal
-color6 #8ec07c
-color14 #8ec07c
+# # Teal
+# color6 #8ec07c
+# color14 #8ec07c
 
-# Extra colors
-color16 #fe8019
-color17 #d65d0e
-color18 #3c3836
-color19 #504945
-color20 #bdae93
-color21 #ebdbb2
+# # Extra colors
+# color16 #fe8019
+# color17 #d65d0e
+# color18 #3c3836
+# color19 #504945
+# color20 #bdae93
+# color21 #ebdbb2
 
 # color0 #000000
 # color8 #767676
