--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -23,8 +23,8 @@ bar_font_color_selected	                    = rgb:df/e1/48
 bar_font		                            = NotoSans Nerd Font:size=12,NotoSans Nerd Font:size=16
 bar_action		                            = conky
 bar_action_expand	                        = 1
-bar_format		                            = +@fg=2;+@fn=1;+L+@fn=0;+5<+@fg=0;+@bg=3;+@fn=1;  +D+@fn=0;+_30_C  +|R +@fg=3;+A
-workspace_indicator	                        = markcurrent,printnames,listall,noindexes,markactive,markempty
+bar_format		                            = +@fg=2;+@fn=1;+L+@fn=0;+5<+@fg=0;+@bg=3;+@fn=1;  +D+@fn=0;+_30_C  +|R +A
+workspace_indicator	                        = markcurrent,markactive,markempty,printnames,listall,noindexes
 workspace_mark_current                      = "+@fg=1;"
 workspace_mark_active                       = "+@fg=2;"
 workspace_mark_empty                        = "+@fg=3;"
