--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -15,19 +15,19 @@ region_padding		                        = 18
 tile_gap		                            = 18
 
 bar_border_width	                        = 2
-bar_border[1]		                        = rgb:00/00/00
-bar_border_unfocus[1]	                    = rgb:00/00/00
-bar_color[1]		                        = rgb:00/00/00,rgb:df/e1/48,rgb:de/de/de,rgb:45/86/A6
-bar_font_color[1]	                        = rgb:de/de/de,rgb:e6/5b/5b,rgb:df/e1/48,rgb:de/de/de
-bar_font_color_selected	                    = rgb:df/e1/48
-bar_font		                            = NotoSans Nerd Font:size=12,NotoSans Nerd Font:size=16
+bar_border[1]		                        = rgb:45/86/A6
+bar_border_unfocus[1]	                    = rgb:45/86/A6
+bar_color[1]		                        = rgb:2D/56/6B,rgb:DF/E1/48,rgb:DE/DE/DE,rgb:45/86/A6
+bar_font_color[1]	                        = rgb:DE/DE/DE,rgb:E6/5B/5B,rgb:DF/E1/48,rgb:3B/42/52
+bar_font_color_selected	                    = rgb:DF/E1/48
+bar_font		                            = Arimo Nerd Font:size=12,Arimo Nerd Font:size=16,Arimo Nerd Font:size=12:style=bold
 bar_action		                            = conky
 bar_action_expand	                        = 1
-bar_format		                            = +@fg=2;+@fn=1;+L+@fn=0;+5<+@fg=0;+@bg=3;+@fn=1;  +D+@fn=0;+_30_C  +|R +A
+bar_format		                            = +2<+@fg=2;+@fn=1;+L+@fn=0;+2<+@fg=0;+@bg=3;+@fn=1;  +D+@fn=0;+_30_C  +|R +A
 workspace_indicator	                        = markcurrent,markactive,markempty,printnames,listall,noindexes
 workspace_mark_current                      = "+@fg=1;"
 workspace_mark_active                       = "+@fg=2;"
-workspace_mark_empty                        = "+@fg=3;"
+workspace_mark_empty                        = "+@fg=0;"
 window_class_enabled	                    = 1
 
 region		                                = screen[1]:1920x1080+0+0
@@ -71,9 +71,7 @@ program[audacity]                           = audacity
 program[mixxx]                              = mixxx
 program[screenrec]                          = simplescreenrecorder
 program[htop]                               = kitty htop
-program[network]                            = nm-connection-editor
 program[git]                                = gitkraken
-program[cadence]                            = cadence
 program[term]		                        = kitty
 
 quirk[Vivaldi-stable]                       = WS[1]
@@ -95,6 +93,8 @@ quirk[kitty:kitty]                          = IGNORESPAWNWS
 quirk[multibootusb]                         = FLOAT
 quirk[Gxmessage]                            = FLOAT
 quirk[Gnome-mplayer]                        = FLOAT
+quirk[scrcpy]                               = FLOAT
+quirk[Yad]                                  = FLOAT
 
 ####### Key bindings #######
 
@@ -111,14 +111,12 @@ bind[screenrec]                             = MOD+F9
 bind[htop]                                  = MOD+F10
 bind[floaterm]                              = MOD+F11
 bind[git]                                   = MOD+F12
+
 bind[screenshot_all]	                    = MOD+Print
 bind[screenshot_gui]   	                    = MOD+p
 bind[term]		                            = MOD+Return
 bind[carla]                                 = MOD+j
-bind[cadence]                               = MOD+v
 bind[paper]                                 = MOD+u
-bind[network]                               = MOD+n
-
 bind[menu]		                            = MOD+d
 bind[run_menu]                              = MOD+Shift+d
 bind[clipmenu]                              = MOD+c
@@ -131,7 +129,6 @@ bind[float_toggle]	                        = MOD+t
 bind[focus_main]	                        = MOD+m
 bind[focus_next]	                        = MOD+Tab
 bind[focus_prev]	                        = MOD+Shift+Tab
-bind[height_grow]	                        = MOD+Shift+equal
 bind[maximize_toggle]	                    = MOD+e
 bind[swap_main]		                        = MOD+Control+Up
 bind[swap_next]		                        = MOD+Control+Right
@@ -145,8 +142,6 @@ bind[master_del]	                        = MOD+period
 bind[master_grow]	                        = MOD+l
 bind[master_shrink]	                        = MOD+h
 bind[stack_dec]		                        = MOD+Shift+period
-bind[width_grow]	                        = MOD+equal
-bind[width_shrink]	                        = MOD+minus
 
 bind[bar_toggle]	                        = MOD+b
 bind[bar_toggle_ws]	                        = MOD+Shift+b
