--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -11,42 +11,41 @@ warp_pointer		                        = 1
 modkey                                      = Mod4
 
 border_width		                        = 0
-region_padding		                        = 18
-tile_gap		                            = 18
+region_padding		                        = 10
+tile_gap		                            = 10
 
 bar_border_width	                        = 2
-bar_border[1]		                        = rgb:45/86/A6
-bar_border_unfocus[1]	                    = rgb:45/86/A6
-bar_color[1]		                        = rgb:2D/56/6B,rgb:DF/E1/48,rgb:DE/DE/DE,rgb:45/86/A6
-bar_font_color[1]	                        = rgb:DE/DE/DE,rgb:E6/5B/5B,rgb:DF/E1/48,rgb:3B/42/52
-bar_font_color_selected	                    = rgb:DF/E1/48
-bar_font		                            = Arimo Nerd Font:size=12,Arimo Nerd Font:size=16,Arimo Nerd Font:size=12:style=bold
+bar_border  		                        = rgb:45/86/A6
+bar_border_unfocus  	                    = rgb:45/86/A6
+bar_color   		                        = rgb:45/86/A6,rgb:DF/E1/48,rgb:DE/DE/DE,rgb:2D/56/6B
+bar_font_color  	                        = rgb:DE/DE/DE,rgb:E6/5B/5B,rgb:DF/E1/48,rgb:3B/42/52
+bar_font		                            = Arimo Nerd Font:size=12,Arimo Nerd Font:size=15,Arimo Nerd Font:size=12:style=bold
 bar_action		                            = conky
 bar_action_expand	                        = 1
-bar_format		                            = +2<+@fg=2;+@fn=1;+L+@fn=0;+2<+@fg=0;+@bg=3;+@fn=1;  +D+@fn=0;+_30_C  +|R +A
+bar_format		                            = +@bg=3;+<+@bg=0;+2<+@fg=2;+@fn=1;+<+L+2<+@fg=0;+@bg=3;+2<+D+2<+@fn=0;+C+|R +A
 workspace_indicator	                        = markcurrent,markactive,markempty,printnames,listall,noindexes
-workspace_mark_current                      = "+@fg=1;"
-workspace_mark_active                       = "+@fg=2;"
-workspace_mark_empty                        = "+@fg=0;"
+workspace_mark_current                      = +@fg=1;
+workspace_mark_active                       = +@fg=2;
+workspace_mark_empty                        = +@fg=0;
 window_class_enabled	                    = 1
 
 region		                                = screen[1]:1920x1080+0+0
 region		                                = screen[1]:1920x1080+1920+0
 
-layout		                                = ws[3]:0:0:0:0:vertical_flip
-layout   		                            = ws[4]:7:0:0:0:vertical
+layout		                                = ws[5]:0:0:0:0:vertical_flip
+layout   		                            = ws[6]:7:0:0:0:vertical
 
 name			                            = ws[1]:爵
 name			                            = ws[2]:
-name                                        = ws[3]:
-name			                            = ws[4]:
-name			                            = ws[5]:
-name                                        = ws[6]:
-name                                        = ws[7]:
+name                                        = ws[3]:
+name			                            = ws[4]:
+name			                            = ws[5]:
+name                                        = ws[6]:
+name                                        = ws[7]:
 
-autorun                                     = ws[3]:pcmanfm
-autorun                                     = ws[5]:thunderbird
-autorun                                     = ws[4]:kitty --name A
+autorun                                     = ws[5]:pcmanfm
+autorun                                     = ws[6]:kitty --name A
+autorun                                     = ws[7]:thunderbird
 
 program[power]                              = sh /mnt/Gog/repos/system/Scripts/dpower.sh
 program[clipmenu]                           = sh /mnt/Gog/repos/system/Scripts/clipmenu.sh
@@ -55,7 +54,6 @@ program[menu]		                        = sh /mnt/Gog/repos/system/Scripts/menu.s
 program[run_menu]                           = sh /mnt/Gog/repos/system/Scripts/run_menu.sh
 program[bindings]                           = sh /mnt/Gog/repos/system/Scripts/bindings.sh
 program[paper]                              = sh /mnt/Gog/repos/system/Scripts/randpaper.sh
-program[kitty_theme]                        = sh /mnt/Gog/repos/system/Scripts/kitty_theme.sh
 program[screenshot_all]	                    = flameshot full -d 5000 -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
 program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
@@ -76,9 +74,9 @@ program[term]		                        = kitty
 
 quirk[Vivaldi-stable]                       = WS[1]
 quirk[code-oss]                             = WS[2]
-quirk[Pcmanfm:pcmanfm]                      = WS[3]
-quirk[kitty:A]                              = WS[4]
-quirk[Thunderbird]                          = WS[5]
+quirk[Pcmanfm:pcmanfm]                      = WS[5]
+quirk[kitty:A]                              = WS[6]
+quirk[Thunderbird]                          = WS[7]
 quirk[Cadence:cadence.py]                   = FLOAT
 quirk[Floaterm]                             = FLOAT
 quirk[Youtube Downloader:youtubedl-gui]     = FLOAT
@@ -122,7 +120,6 @@ bind[run_menu]                              = MOD+Shift+d
 bind[clipmenu]                              = MOD+c
 bind[bindings]                              = MOD+k
 bind[winfind]                               = MOD+g
-bind[kitty_theme]                           = MOD+r
 bind[power]                                 = MOD+Pause
 
 bind[float_toggle]	                        = MOD+t
