--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -15,12 +15,14 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 15.0;
+corner-radius = 10.0;
 rounded-corners-exclude = [
   "window_type = 'tooltip'",
+  "window_type = 'menu'",
   "class_g = 'Dunst'",
   "class_g = 'Polybar'",
   "class_g = 'spectrwm'",
+  "class_g = 'dzen'",
   "class_g = 'dmenu'"
 ];
 round-borders = 1;
@@ -255,7 +257,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
   #method = "kernel";
-  strength = 7;
+  strength = 4;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -268,7 +270,8 @@ blur: {
 blur-background-exclude = [
   #"window_type = 'dock'",
   #"window_type = 'desktop'",
-  #"class_g = 'URxvt'",
+  "class_g = 'spectrwm'",
+  "class_g = 'dzen'",
   #
   # prevents picom from blurring the background
   # when taking selection screenshot with `main`
