--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -14,6 +14,7 @@ border_width		                        = 0
 region_padding		                        = 10
 tile_gap		                            = 10
 
+
 bar_border_width	                        = 2
 bar_border  		                        = rgb:45/86/A6
 bar_border_unfocus  	                    = rgb:45/86/A6
@@ -40,9 +41,10 @@ name			                            = ws[2]:
 name                                        = ws[3]:
 name			                            = ws[4]:
 name			                            = ws[5]:
-name                                        = ws[6]:
+name                                        = ws[6]:
 name                                        = ws[7]:
 
+autorun                                     = ws[1]:/mnt/Gog/Scripts/transbar.sh
 autorun                                     = ws[5]:pcmanfm
 autorun                                     = ws[6]:kitty --name A
 autorun                                     = ws[7]:thunderbird
@@ -53,7 +55,7 @@ program[winfind]                            = sh /mnt/Gog/repos/system/Scripts/d
 program[menu]		                        = sh /mnt/Gog/repos/system/Scripts/menu.sh
 program[run_menu]                           = sh /mnt/Gog/repos/system/Scripts/run_menu.sh
 program[bindings]                           = sh /mnt/Gog/repos/system/Scripts/bindings.sh
-program[paper]                              = sh /mnt/Gog/repos/system/Scripts/randpaper.sh
+program[paper]                              = nitrogen
 program[screenshot_all]	                    = flameshot full -d 5000 -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
 program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
@@ -93,6 +95,7 @@ quirk[Gxmessage]                            = FLOAT
 quirk[Gnome-mplayer]                        = FLOAT
 quirk[scrcpy]                               = FLOAT
 quirk[Yad]                                  = FLOAT
+quirk[Nitrogen]                             = FLOAT
 
 ####### Key bindings #######
 
@@ -170,5 +173,4 @@ bind[rg_prev]		                        = MOD+Shift+Left
 
 bind[restart]		                        = MOD+q
 bind[restart_of_day]                        = MOD+Shift+q
-
-bind[]	     	                            = MOD+Shift+Delete
+bind[quit]	                                = MOD+Shift+Delete
