Parked HLWM & dzen

--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -14,21 +14,20 @@ border_width		                        = 0
 region_padding		                        = 10
 tile_gap		                            = 10
 
-
 bar_border_width	                        = 2
-bar_border  		                        = rgb:45/86/A6
-bar_border_unfocus  	                    = rgb:45/86/A6
+bar_border  		                        = rgb:DE/DE/DE
+bar_border_unfocus  	                    = rgb:DE/DE/DE
 bar_color   		                        = rgb:45/86/A6,rgb:DF/E1/48,rgb:DE/DE/DE,rgb:2D/56/6B
 bar_font_color  	                        = rgb:DE/DE/DE,rgb:E6/5B/5B,rgb:DF/E1/48,rgb:3B/42/52
 bar_font		                            = Arimo Nerd Font:size=12,Arimo Nerd Font:size=15,Arimo Nerd Font:size=12:style=bold
 bar_action		                            = conky
 bar_action_expand	                        = 1
-bar_format		                            = +@bg=3;+<+@bg=0;+2<+@fg=2;+@fn=1;+<+L+2<+@fg=0;+@bg=3;+2<+D+2<+@fn=0;+C+|R +A
+bar_format		                            = +@bg=3;+<+@bg=0;+2<+@fg=2;+@fn=1;+<+L+2<+@fg=0;+@bg=3;+2<+D+2<+@fn=0;+W+|R +A
 workspace_indicator	                        = markcurrent,markactive,markempty,printnames,listall,noindexes
 workspace_mark_current                      = +@fg=1;
 workspace_mark_active                       = +@fg=2;
 workspace_mark_empty                        = +@fg=0;
-window_class_enabled	                    = 1
+window_name_enabled                         = 1
 
 region		                                = screen[1]:1920x1080+0+0
 region		                                = screen[1]:1920x1080+1920+0
@@ -44,7 +43,7 @@ name			                            = ws[5]:
 name                                        = ws[6]:
 name                                        = ws[7]:
 
-autorun                                     = ws[1]:/mnt/Gog/Scripts/transbar.sh
+autorun                                     = ws[1]:sh /mnt/Gog/Scripts/transbar.sh
 autorun                                     = ws[5]:pcmanfm
 autorun                                     = ws[6]:kitty --name A
 autorun                                     = ws[7]:thunderbird
@@ -59,10 +58,10 @@ program[paper]                              = nitrogen
 program[screenshot_all]	                    = flameshot full -d 5000 -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
 program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
-program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 20% carla-jack-multi
+program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 20% carla-jack-single
 program[browser]                            = vivaldi-stable
 program[browser_session]                    = vivaldi-stable --restore-last-session
-program[editor]                             = code-oss
+program[editor]                             = code
 program[fileman]                            = pcmanfm
 program[gimp]                               = gimp --no-splash
 program[rack]                               = vcvrack
@@ -82,7 +81,7 @@ quirk[Thunderbird]                          = WS[7]
 quirk[Cadence:cadence.py]                   = FLOAT
 quirk[Floaterm]                             = FLOAT
 quirk[Youtube Downloader:youtubedl-gui]     = FLOAT
-quirk[Carla2-Multi-Client]                  = FLOAT
+quirk[Carla2-Single-Client]                 = FLOAT
 quirk[SimpleScreenRecorder]                 = FLOAT
 quirk[Nm-connection-editor]                 = FLOAT
 quirk[Gcolor2]                              = FLOAT
@@ -90,10 +89,8 @@ quirk[Arandr]                               = FLOAT
 quirk[balena-etcher-electron]               = FLOAT
 quirk[feh]                                  = FLOAT + IGNORESPAWNWS
 quirk[kitty:kitty]                          = IGNORESPAWNWS
-quirk[multibootusb]                         = FLOAT
 quirk[Gxmessage]                            = FLOAT
 quirk[Gnome-mplayer]                        = FLOAT
-quirk[scrcpy]                               = FLOAT
 quirk[Yad]                                  = FLOAT
 quirk[Nitrogen]                             = FLOAT
 
