--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -379,7 +379,7 @@ tab_bar_background      #999
 
 #: Color scheme {{{
 
-include ./theme.conf
+include ~/.cache/wal/colors-kitty.conf
 
 # foreground #dddddd
 # background #000000
