--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -15,7 +15,7 @@ size-transition = true
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
+corner-radius = 0.0;
 rounded-corners-exclude = [
   "window_type = 'tooltip'",
   "window_type = 'menu'",
@@ -44,18 +44,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 12;
+shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-# shadow-opacity = .75
+shadow-opacity = .45
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -15;
+shadow-offset-x = +5;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -15;
+shadow-offset-y = +5;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -94,9 +94,9 @@ shadow-offset-y = -15;
 #
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
+#  "name = 'Notification'",
   "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
+#  "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
   "class_g = 'slop'",
   "class_g = 'Polybar'",
@@ -112,7 +112,7 @@ shadow-exclude = [
 # shadow-exclude-reg = "" 
 
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
-# xinerama-shadow-crop = false
+xinerama-shadow-crop = true
 
 
 #################################
@@ -123,7 +123,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = false;
+fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -186,7 +186,8 @@ inactive-dim = 0.1
 focus-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'"                    # maim
+  "class_g = 'slop'",                   # maim
+  "class_g = 'kitty'"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -501,7 +502,7 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = false; shadow = false; }
+  normal = { fade = true; shadow = true; }
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
