--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -1,5 +1,5 @@
 ###########################################################################
-###                    spectrwm for discordia - 2021                    ###
+###                        spectrwm@discordia - 2021                    ###
 ###########################################################################
 
 workspace_limit	                            = 7
@@ -11,29 +11,28 @@ warp_pointer		                        = 1
 modkey                                      = Mod4
 
 border_width		                        = 0
-region_padding		                        = 10
-tile_gap		                            = 10
+region_padding		                        = 20
+tile_gap		                            = 20
 
-bar_border_width	                        = 2
-bar_border  		                        = rgb:DE/DE/DE
-bar_border_unfocus  	                    = rgb:DE/DE/DE
-bar_color   		                        = rgb:45/86/A6,rgb:DF/E1/48,rgb:DE/DE/DE,rgb:2D/56/6B
-bar_font_color  	                        = rgb:DE/DE/DE,rgb:E6/5B/5B,rgb:DF/E1/48,rgb:3B/42/52
-bar_font		                            = Arimo Nerd Font:size=12,Arimo Nerd Font:size=15,Arimo Nerd Font:size=12:style=bold
+bar_enabled                                 = 1
+bar_border_width	                        = 0
+bar_color   		                        = rgb:29/35/3C
+bar_font_color  	                        = rgb:DE/DE/DE,rgb:E6/5B/5B,rgb:DF/E1/48
+bar_font		                            = Arimo Nerd Font:size=13,Arimo Nerd Font:size=14,Arimo Nerd Font:size=13:style=bold
 bar_action		                            = conky
 bar_action_expand	                        = 1
-bar_format		                            = +@bg=3;+<+@bg=0;+2<+@fg=2;+@fn=1;+<+L+2<+@fg=0;+@bg=3;+2<+D+2<+@fn=0;+W+|R +A
+bar_format		                            = +<+2<+@fg=2;+@fn=1;+<+L+2<+@fg=0;+5<+D+2<+@fn=0;+W+|R +A
 workspace_indicator	                        = markcurrent,markactive,markempty,printnames,listall,noindexes
-workspace_mark_current                      = +@fg=1;
+workspace_mark_current                      = +@fg=2;
 workspace_mark_active                       = +@fg=2;
 workspace_mark_empty                        = +@fg=0;
 window_name_enabled                         = 1
 
 region		                                = screen[1]:1920x1080+0+0
-region		                                = screen[1]:1920x1080+1920+0
+region		                                = screen[1]:1920x1080+1920+0+0
 
 layout		                                = ws[5]:0:0:0:0:vertical_flip
-layout   		                            = ws[6]:7:0:0:0:vertical
+layout   		                            = ws[6]:6:0:0:0:vertical
 
 name			                            = ws[1]:爵
 name			                            = ws[2]:
@@ -48,13 +47,13 @@ autorun                                     = ws[5]:pcmanfm
 autorun                                     = ws[6]:kitty --name A
 autorun                                     = ws[7]:thunderbird
 
-program[power]                              = sh /mnt/Gog/repos/system/Scripts/dpower.sh
-program[clipmenu]                           = sh /mnt/Gog/repos/system/Scripts/clipmenu.sh
-program[winfind]                            = sh /mnt/Gog/repos/system/Scripts/dswitcher.sh
-program[menu]		                        = sh /mnt/Gog/repos/system/Scripts/menu.sh
-program[run_menu]                           = sh /mnt/Gog/repos/system/Scripts/run_menu.sh
-program[bindings]                           = sh /mnt/Gog/repos/system/Scripts/bindings.sh
-program[paper]                              = nitrogen
+program[power]                              = sh /mnt/Gog/Scripts/dpower.sh
+program[clipmenu]                           = sh /mnt/Gog/Scripts/clipmenu.sh
+program[winfind]                            = sh /mnt/Gog/Scripts/dswitcher.sh
+program[menu]		                        = sh /mnt/Gog/Scripts/menu.sh
+program[run_menu]                           = sh /mnt/Gog/Scripts/run_menu.sh
+program[bindings]                           = sh /mnt/Gog/Scripts/bindings.sh
+program[check]                              = sh /mnt/Gog/Scripts/check.sh
 program[screenshot_all]	                    = flameshot full -d 5000 -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
 program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
@@ -72,6 +71,7 @@ program[screenrec]                          = simplescreenrecorder
 program[htop]                               = kitty htop
 program[git]                                = gitkraken
 program[term]		                        = kitty
+program[wal]                                = sh /mnt/Gog/Scripts/walrand.sh
 
 quirk[Vivaldi-stable]                       = WS[1]
 quirk[code-oss]                             = WS[2]
@@ -92,7 +92,8 @@ quirk[kitty:kitty]                          = IGNORESPAWNWS
 quirk[Gxmessage]                            = FLOAT
 quirk[Gnome-mplayer]                        = FLOAT
 quirk[Yad]                                  = FLOAT
-quirk[Nitrogen]                             = FLOAT
+quirk[PkgBrowser]                           = FLOAT
+quirk[Wpg]                                  = FLOAT
 
 ####### Key bindings #######
 
@@ -114,13 +115,14 @@ bind[screenshot_all]	                    = MOD+Print
 bind[screenshot_gui]   	                    = MOD+p
 bind[term]		                            = MOD+Return
 bind[carla]                                 = MOD+j
-bind[paper]                                 = MOD+u
 bind[menu]		                            = MOD+d
 bind[run_menu]                              = MOD+Shift+d
 bind[clipmenu]                              = MOD+c
 bind[bindings]                              = MOD+k
 bind[winfind]                               = MOD+g
+bind[check]                                 = Mod+i
 bind[power]                                 = MOD+Pause
+bind[wal]                                   = MOD+u
 
 bind[float_toggle]	                        = MOD+t
 bind[focus_main]	                        = MOD+m
