the move to qtile

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,12 +3,12 @@
 #################################
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
-transition-length = 300
-transition-pow-x = 0.1
-transition-pow-y = 0.1
-transition-pow-w = 0.1
-transition-pow-h = 0.1
-size-transition = true
+#transition-length = 300
+#transition-pow-x = 0.1
+#transition-pow-y = 0.1
+#transition-pow-w = 0.1
+#transition-pow-h = 0.1
+#size-transition = true
 
 
 #################################
@@ -60,7 +60,7 @@ shadow-offset-y = +5;
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
-# no-dock-shadow = false
+no-dock-shadow = true
 
 # Don't draw shadows on drag-and-drop windows. This option is deprecated, 
 # you should use the *wintypes* option in your config file instead.
@@ -101,6 +101,7 @@ shadow-exclude = [
   "class_g = 'slop'",
   "class_g = 'Polybar'",
   "class_g = 'spectrwm'",
+  "QTILE_INTERNAL:32c = 1",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
