--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -17,19 +17,12 @@ tile_gap		                            = 20
 bar_enabled                                 = 1
 bar_border_width	                        = 0
 bar_color   		                        = rgb:29/35/3C
-bar_font_color  	                        = rgb:DE/DE/DE,rgb:E6/5B/5B,rgb:DF/E1/48
-bar_font		                            = Arimo Nerd Font:size=13,Arimo Nerd Font:size=14,Arimo Nerd Font:size=13:style=bold
-bar_action		                            = conky
-bar_action_expand	                        = 1
-bar_format		                            = +<+2<+@fg=2;+@fn=1;+<+L+2<+@fg=0;+5<+D+2<+@fn=0;+W+|R +A
-workspace_indicator	                        = markcurrent,markactive,markempty,printnames,listall,noindexes
-workspace_mark_current                      = +@fg=2;
-workspace_mark_active                       = +@fg=2;
-workspace_mark_empty                        = +@fg=0;
-window_name_enabled                         = 1
+bar_font_color  	                        = rgb:DE/DE/DE
+bar_font		                            = Arimo Nerd Font:size=14
+bar_format		                            = Discordia
 
 region		                                = screen[1]:1920x1080+0+0
-region		                                = screen[1]:1920x1080+1920+0+0
+region		                                = screen[1]:1920x1080+1920+0
 
 layout		                                = ws[5]:0:0:0:0:vertical_flip
 layout   		                            = ws[6]:6:0:0:0:vertical
@@ -42,7 +35,8 @@ name			                            = ws[5]:
 name                                        = ws[6]:
 name                                        = ws[7]:
 
-autorun                                     = ws[1]:sh /mnt/Gog/Scripts/transbar.sh
+autorun                                     = ws[2]:sh /mnt/Gog/Scripts/transbar.sh
+autorun                                     = ws[1]:sh /mnt/Gog/Scripts/poly.sh
 autorun                                     = ws[5]:pcmanfm
 autorun                                     = ws[6]:kitty --name A
 autorun                                     = ws[7]:thunderbird
