--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -3,20 +3,21 @@
 #################################
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
-#transition-length = 300
-#transition-pow-x = 0.1
-#transition-pow-y = 0.1
-#transition-pow-w = 0.1
-#transition-pow-h = 0.1
-#size-transition = true
+transition-length = 300
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
+size-transition = true
 
 
 #################################
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 0.0;
+corner-radius = 10.0;
 rounded-corners-exclude = [
+  "QTILE_INTERNAL:32c = 1",
   "window_type = 'tooltip'",
   "window_type = 'menu'",
   "class_g = 'Dunst'",
@@ -363,7 +364,7 @@ refresh-rate = 0
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true
+# detect-transient = true
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
