--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -54,7 +54,7 @@ program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 
 program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 20% carla-jack-single
 program[browser]                            = vivaldi-stable
 program[browser_session]                    = vivaldi-stable --restore-last-session
-program[editor]                             = code
+program[editor]                             = vscodium
 program[fileman]                            = pcmanfm
 program[gimp]                               = gimp --no-splash
 program[rack]                               = vcvrack
