--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,35 +1,35 @@
-#################################
-#          Animations           #
-#################################
-# requires https://github.com/jonaburg/picom
-# (These are also the default values)
-transition-length = 300
-transition-pow-x = 0.1
-transition-pow-y = 0.1
-transition-pow-w = 0.1
-transition-pow-h = 0.1
-size-transition = true
+# #################################
+# #          Animations           #
+# #################################
+# # requires https://github.com/jonaburg/picom
+# # (These are also the default values)
+# transition-length = 300
+# transition-pow-x = 0.1
+# transition-pow-y = 0.1
+# transition-pow-w = 0.1
+# transition-pow-h = 0.1
+# size-transition = true
 
 
-#################################
-#             Corners           #
-#################################
-# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 10.0;
-rounded-corners-exclude = [
-  "QTILE_INTERNAL:32c = 1",
-  "window_type = 'tooltip'",
-  "window_type = 'menu'",
-  "class_g = 'Dunst'",
-  "class_g = 'Polybar'",
-  "class_g = 'spectrwm'",
-  "class_g = 'dzen'",
-  "class_g = 'dmenu'"
-];
-round-borders = 1;
-round-borders-exclude = [
+# #################################
+# #             Corners           #
+# #################################
+# # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
+# corner-radius = 10.0;
+# rounded-corners-exclude = [
+#   "QTILE_INTERNAL:32c = 1",
+#   "window_type = 'tooltip'",
+#   "window_type = 'menu'",
+#   "class_g = 'Dunst'",
+#   "class_g = 'Polybar'",
+#   "class_g = 'spectrwm'",
+#   "class_g = 'dzen'",
+#   "class_g = 'dmenu'"
+# ];
+# round-borders = 1;
+# round-borders-exclude = [
 
-];
+# ];
 
 #################################
 #             Shadows           #
@@ -45,18 +45,18 @@ shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+#shadow-radius = 7;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
-shadow-opacity = .45
+#shadow-opacity = .25
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = +5;
+#shadow-offset-x = 0;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = +5;
+#shadow-offset-y = 0;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
@@ -102,7 +102,7 @@ shadow-exclude = [
   "class_g = 'slop'",
   "class_g = 'Polybar'",
   "class_g = 'spectrwm'",
-  "QTILE_INTERNAL:32c = 1",
+#  "QTILE_INTERNAL:32c = 1",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
