--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -2,7 +2,7 @@
 ###                        spectrwm@discordia - 2021                    ###
 ###########################################################################
 
-workspace_limit	                            = 7
+workspace_limit	                            = 6
 focus_mode  		                        = default
 spawn_position		                        = first
 workspace_clamp	                            = 1
@@ -14,32 +14,25 @@ border_width		                        = 0
 region_padding		                        = 20
 tile_gap		                            = 20
 
-bar_enabled                                 = 1
+bar_enabled                                 = 0
 bar_border_width	                        = 0
 bar_color   		                        = rgb:29/35/3C
 bar_font_color  	                        = rgb:DE/DE/DE
 bar_font		                            = Arimo Nerd Font:size=14
 bar_format		                            = Discordia
 
-region		                                = screen[1]:1920x1080+0+0
-region		                                = screen[1]:1920x1080+1920+0
+region		                                = screen[1]:3840x1080+0+0
+# region		                                = screen[1]:1920x1080+1920+0
 
 layout		                                = ws[5]:0:0:0:0:vertical_flip
 layout   		                            = ws[6]:6:0:0:0:vertical
 
-name			                            = ws[1]:爵
-name			                            = ws[2]:
-name                                        = ws[3]:
-name			                            = ws[4]:
-name			                            = ws[5]:
-name                                        = ws[6]:
-name                                        = ws[7]:
-
-autorun                                     = ws[2]:sh /mnt/Gog/Scripts/transbar.sh
-autorun                                     = ws[1]:sh /mnt/Gog/Scripts/poly.sh
-autorun                                     = ws[5]:pcmanfm
-autorun                                     = ws[6]:kitty --name A
-autorun                                     = ws[7]:thunderbird
+name			                            = ws[1]:1
+name			                            = ws[2]:2
+name                                        = ws[3]:3
+name			                            = ws[4]:4
+name			                            = ws[5]:5
+name                                        = ws[6]:6
 
 program[power]                              = sh /mnt/Gog/Scripts/dpower.sh
 program[clipmenu]                           = sh /mnt/Gog/Scripts/clipmenu.sh
@@ -48,30 +41,25 @@ program[menu]		                        = sh /mnt/Gog/Scripts/menu.sh
 program[run_menu]                           = sh /mnt/Gog/Scripts/run_menu.sh
 program[bindings]                           = sh /mnt/Gog/Scripts/bindings.sh
 program[check]                              = sh /mnt/Gog/Scripts/check.sh
+program[wal]                                = sh /mnt/Gog/Scripts/walrand.sh
+
 program[screenshot_all]	                    = flameshot full -d 5000 -p /mnt/Gog/Pictures/scrots
 program[screenshot_gui]	                    = flameshot gui -p /mnt/Gog/Temp
+
 program[floaterm]                           = tdrop -am -w 50% -h 50% -y 30% -x 20% kitty --class Floaterm
 program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 20% carla-jack-single
+program[tbird]                              = tdrop -am -w 70% -h 65% -y 25% -x 25% thunderbird
+program[files]                              = tdrop -am -w 70% -h 65% -y 25% -x 25% pcmanfm
+
 program[browser]                            = vivaldi-stable
 program[browser_session]                    = vivaldi-stable --restore-last-session
 program[editor]                             = vscodium
-program[fileman]                            = pcmanfm
-program[gimp]                               = gimp --no-splash
-program[rack]                               = vcvrack
-program[nano]                               = kitty nano
-program[audacity]                           = audacity
-program[mixxx]                              = mixxx
-program[screenrec]                          = simplescreenrecorder
-program[htop]                               = kitty htop
-program[git]                                = gitkraken
-program[term]		                        = kitty
-program[wal]                                = sh /mnt/Gog/Scripts/walrand.sh
+program[term]                               = kitty
 
 quirk[Vivaldi-stable]                       = WS[1]
 quirk[code-oss]                             = WS[2]
-quirk[Pcmanfm:pcmanfm]                      = WS[5]
-quirk[kitty:A]                              = WS[6]
-quirk[Thunderbird]                          = WS[7]
+quirk[Thunderbird]                          = FLOAT
+quirk[Pcmanfm]                              = FLOAT
 quirk[Cadence:cadence.py]                   = FLOAT
 quirk[Floaterm]                             = FLOAT
 quirk[Youtube Downloader:youtubedl-gui]     = FLOAT
@@ -94,21 +82,14 @@ quirk[Wpg]                                  = FLOAT
 bind[browser]                               = MOD+F1
 bind[browser_session]                       = MOD+Shift+F1
 bind[editor]                                = MOD+F2
-bind[fileman]                               = MOD+F3
-bind[gimp]                                  = MOD+F4
-bind[rack]                                  = MOD+F5
-bind[nano]                                  = MOD+F6
-bind[audacity]                              = MOD+F7
-bind[mixxx]                                 = MOD+F8
-bind[screenrec]                             = MOD+F9
-bind[htop]                                  = MOD+F10
-bind[floaterm]                              = MOD+F11
-bind[git]                                   = MOD+F12
 
 bind[screenshot_all]	                    = MOD+Print
 bind[screenshot_gui]   	                    = MOD+p
 bind[term]		                            = MOD+Return
+bind[floaterm]                              = MOD+Shift+Return
 bind[carla]                                 = MOD+j
+bind[tbird]                                 = MOD+y
+bind[files]                                 = MOD+f
 bind[menu]		                            = MOD+d
 bind[run_menu]                              = MOD+Shift+d
 bind[clipmenu]                              = MOD+c
@@ -146,14 +127,12 @@ bind[mvws_3]		                        = MOD+Shift+3
 bind[mvws_4]		                        = MOD+Shift+4
 bind[mvws_5]		                        = MOD+Shift+5
 bind[mvws_6]		                        = MOD+Shift+6
-bind[mvws_7]		                        = MOD+Shift+7
 bind[ws_1]		                            = MOD+1
 bind[ws_2]		                            = MOD+2
 bind[ws_3]		                            = MOD+3
 bind[ws_4]		                            = MOD+4
 bind[ws_5]		                            = MOD+5
 bind[ws_6]		                            = MOD+6
-bind[ws_7]		                            = MOD+7
 bind[ws_next]		                        = MOD+Right
 bind[ws_next_all]	                        = MOD+Up
 bind[ws_next_move]	                        = MOD+Shift+Up
