--- a/spectrwm.conf
+++ b/spectrwm.conf
@@ -51,8 +51,7 @@ program[carla]                              = tdrop -am -w 50% -h 50% -y 30% -x 
 program[tbird]                              = tdrop -am -w 70% -h 65% -y 25% -x 25% thunderbird
 program[files]                              = tdrop -am -w 70% -h 65% -y 25% -x 25% pcmanfm
 
-program[browser]                            = vivaldi-stable
-program[browser_session]                    = vivaldi-stable --restore-last-session
+program[browser]                            = microsoft-edge-beta
 program[editor]                             = vscodium
 program[term]                               = kitty
 
@@ -80,7 +79,6 @@ quirk[Wpg]                                  = FLOAT
 ####### Key bindings #######
 
 bind[browser]                               = MOD+F1
-bind[browser_session]                       = MOD+Shift+F1
 bind[editor]                                = MOD+F2
 
 bind[screenshot_all]	                    = MOD+Print
