--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -211,7 +211,7 @@ opacity-rule = [
   "100:class_g    = 'kitty'",
   "100:class_g    = 'Alacritty'",
   "80:class_g     = 'Polybar'",
-  "80:class_g    = 'code-oss'",
+  "80:class_g     = 'VSCodium'",
   "100:class_g    = 'Meld'",
   "70:class_g     = 'TelegramDesktop'",
   "90:class_g     = 'Joplin'",
